<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_musicList"
            android:icon="@drawable/note_paper_icon"
            android:title="@string/music_list" />
        <item
            android:id="@+id/nav_musicPicker"
            android:icon="@drawable/note_icon"
            android:title="@string/choose_music" />
        <item
            android:id="@+id/nav_runScreen"
            android:icon="@mipmap/running_icon"
            android:tint="@color/darker_gray"
            android:title="@string/run_screen" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>